--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "mongodb"
   ],
   "author": "jrTilak",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mern-template": "file:"
+  }
 }
