--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mern-backend": "file:",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.0",
